objects/Success_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>Business_Objective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Objective</label>
        <referenceTo>Business_Objectives__c</referenceTo>
        <relationshipLabel>Success Criteria</relationshipLabel>
        <relationshipName>Success_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Outcome__c</fullName>
        <label>Business Outcome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criteria_type__c</fullName>
        <label>Criteria type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>KPI</fullName>
                </value>
                <value>
                    <fullName>Customer Milestone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_State_Results__c</fullName>
        <label>Current State Results</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <label>Goal</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Measurement__c</fullName>
        <label>Measurement</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>On Track</fullName>
                </value>
                <value>
                    <fullName>Potential Risk</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Risk/Roadblock</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <label>Target Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <description>Used for C360 Customer Success Program</description>
    <label>Success Criteria</label>
    <nameField>
        <label>Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Success Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>Business_Objective_non_editable</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Name &lt;&gt; "Cisco_ADMIN", ISCHANGED(Business_Objective__c ))</errorConditionFormula>
        <errorMessage>Business objective cannot be editable</errorMessage>
    </validationRules>
</CustomObject>